--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "destroy": "^1.2.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^4.8.1",
     "react": "^18.0.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
